--- a/app/src/main/res/layout/activity_patient_list.xml
+++ b/app/src/main/res/layout/activity_patient_list.xml
@@ -71,13 +71,12 @@
             android:id="@+id/button_view_archived"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Archive"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:background="@drawable/button_round"
-            android:textColor="#FFFFFF"/>
+            android:backgroundTint="#842B2B"
+            android:text="Archive"
+            android:textColor="#FFFFFF"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
 
