--- a/app/src/main/res/layout/fragment_current_medical_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_current_medical_diagnostics.xml
@@ -119,6 +119,57 @@
         android:orientation="horizontal">
 
         <LinearLayout
+            android:id="@+id/currentMedicalDiagnosticsHeartRateContainer"
+            android:layout_width="376dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/currentMedicalDiagnosticsHeartRateHeadingTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingTop="15dp"
+                android:text="@string/heart_rate"
+                android:textColor="@color/text_heading_color"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/currentMedicalDiagnosticsHeartRateTextView"
+                android:layout_width="365dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="1dp"
+                android:autofillHints=""
+                android:background="@null"
+                android:inputType="text"
+                android:text="@string/normal"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/currentMedicalDiagnosticsNameHeadingTextView" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/current_heart_rate_pencil"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:background="@drawable/pencil" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/box_border" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
             android:id="@+id/currentMedicalDiagnosticsPatientTemperatureContainer"
             android:layout_width="376dp"
             android:layout_height="wrap_content"
