--- a/app/src/main/res/layout/fragment_past_medical_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_past_medical_diagnostics.xml
@@ -125,7 +125,7 @@
 
         <LinearLayout
             android:id="@+id/pastMedicalDiagnosticsHeartRateContainer"
-            android:layout_width="376dp"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -142,7 +142,7 @@
 
             <EditText
                 android:id="@+id/pastMedicalDiagnosticsHeartRateTextView"
-                android:layout_width="365dp"
+                android:layout_width="340dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="1dp"
@@ -162,6 +162,15 @@
             android:layout_height="20dp"
             android:layout_gravity="center"
             android:background="@drawable/pencil" />
+
+        <ImageView
+            android:id="@+id/pastMedicalDiagnosticsHeartRateArrowButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:scaleType="centerInside"
+            android:src="@drawable/right_arrow_2" />
     </LinearLayout>
 
 
@@ -317,7 +326,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
-            android:background="@drawable/pencil" />
+            android:src="@drawable/pencil" />
 
     </LinearLayout>
 
