--- a/app/src/main/res/layout/fragment_past_medical_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_past_medical_diagnostics.xml
@@ -112,6 +112,67 @@
         android:layout_height="1dp"
         android:background="@color/box_border" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/box_border" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:id="@+id/pastMedicalDiagnosticsHeartRateContainer"
+            android:layout_width="340dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/pastMedicalDiagnosticsHeartRateHeadingTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingTop="15dp"
+                android:text="@string/heart_rate"
+                android:textColor="@color/text_heading_color"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/pastMedicalDiagnosticsHeartRateTextView"
+                android:layout_width="340dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="1dp"
+                android:autofillHints=""
+                android:background="@null"
+                android:inputType="text"
+                android:text="@string/normal"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pastMedicalDiagnosticsNameHeadingTextView" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/past_heart_rate_pencil"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center"
+            android:background="@drawable/pencil" />
+
+        <ImageView
+            android:id="@+id/pastMedicalDiagnosticsHeartRateArrowButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:scaleType="centerInside"
+            android:src="@drawable/right_arrow_2" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
