--- a/app/src/main/res/layout/activity_fall_alert.xml
+++ b/app/src/main/res/layout/activity_fall_alert.xml
@@ -6,7 +6,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="deakin.gopher.guardian.view.general.PatientListActivity">
+    tools:context="deakin.gopher.guardian.view.general.PatientListFragment">
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
