--- a/app/src/main/res/layout/fragment_patient_list.xml
+++ b/app/src/main/res/layout/fragment_patient_list.xml
@@ -6,67 +6,21 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="deakin.gopher.guardian.view.general.PatientListActivity">
+    tools:context="deakin.gopher.guardian.view.general.PatientListFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/patient_list_backgroud"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context="deakin.gopher.guardian.view.general.PatientListActivity">
-
-    <ImageView
-        android:id="@+id/patient_list_menu_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="51dp"
-        android:layout_marginTop="65dp"
-        android:contentDescription="TODO"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/menu_button" />
+        tools:context="deakin.gopher.guardian.view.general.PatientListFragment">
 
 
-    <ImageView
-            android:id="@+id/patient_list_head_image"
-            android:layout_width="54dp"
-            android:layout_height="51dp"
-            android:layout_marginStart="94dp"
-            android:layout_marginTop="56dp"
-            android:contentDescription="TODO"
-            app:layout_constraintStart_toEndOf="@+id/patient_list_company_icon"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/profile_icon_small" />
-
-    <ImageView
-            android:id="@+id/patient_list_company_icon"
-            android:layout_width="67dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="172dp"
-            android:layout_marginTop="44dp"
-            android:contentDescription="TODO"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/gopher_logo" />
-
-    <TextView
-            android:id="@+id/patient_list_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="132dp"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/patient_list"
-            android:textColor="@android:color/white"
-            android:textSize="25sp"
-            android:translationZ="2dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/patient_list_company_icon" />
 
     <SearchView
+
             android:id="@+id/patient_list_searchView"
             android:layout_width="375dp"
             android:layout_height="64dp"
@@ -75,8 +29,7 @@
             android:background="@drawable/white_rectangle_patient_list"
             android:iconifiedByDefault="false"
             android:queryHint="Search patients or others"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/patient_list_title" />
+            app:layout_constraintStart_toStartOf="parent" />
 
 
     <androidx.cardview.widget.CardView
