--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="375dp"
@@ -25,9 +24,9 @@
                 android:layout_width="35dp"
                 android:layout_height="33dp"
                 android:contentDescription="TODO"
-                app:srcCompat="@drawable/red_circle" />
-            <!--                tools:layout_editor_absoluteX="41dp"-->
-            <!--                tools:layout_editor_absoluteY="232dp" />-->
+                app:srcCompat="@drawable/red_circle"
+                tools:layout_editor_absoluteX="41dp"
+                tools:layout_editor_absoluteY="232dp" />
 
             <TextView
                 android:id="@+id/task_description_text_view"
