--- a/app/src/main/res/layout/activity_main_page_with_menu.xml
+++ b/app/src/main/res/layout/activity_main_page_with_menu.xml
@@ -142,6 +142,38 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/menu_nurse_roster_linearLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="27dp"
+                    android:layout_marginTop="63dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:orientation="horizontal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/menu_sign_out_linearLayout">
+
+                    <ImageView
+                        android:id="@+id/menu_nurse_roster_icon"
+                        android:layout_width="22.5dp"
+                        android:layout_height="20dp"
+                        android:contentDescription="TODO"
+                        android:src="@drawable/call" />
+
+                    <TextView
+                        android:id="@+id/menu_nurse_roster_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:fontFamily="@font/poppins_bold"
+                        android:text="@string/nurse_roster"
+                        android:textColor="#FFFFFF"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+
+                <LinearLayout
                         android:id="@+id/menu_sign_out_linearLayout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
