--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -23,7 +23,9 @@
                 android:layout_width="35dp"
                 android:layout_height="33dp"
                 android:contentDescription="TODO"
-                app:srcCompat="@drawable/red_circle" />
+                app:srcCompat="@drawable/red_circle"
+                tools:layout_editor_absoluteX="41dp"
+                tools:layout_editor_absoluteY="232dp" />
 
             <TextView
                 android:id="@+id/task_description_text_view"
