--- a/app/src/main/res/layout/activity_tasks_list.xml
+++ b/app/src/main/res/layout/activity_tasks_list.xml
@@ -141,10 +141,12 @@
         android:id="@+id/imageView61"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_marginStart="188dp"
         android:contentDescription="TODO"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/three_point"
-        tools:layout_editor_absoluteY="648dp" />
+        app:layout_constraintTop_toBottomOf="@+id/task_list_recycleView"
+        app:layout_constraintVertical_bias="0.869"
+        app:srcCompat="@drawable/three_point" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
