--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -22,6 +22,11 @@
             android:title="Settings" />
 
         <item
+            android:id="@+id/add_task"
+            android:icon="@drawable/menu_data_entry"
+            android:title="Add Task" />
+
+        <item
             android:id="@+id/nav_signout"
             android:icon="@drawable/menu_signout"
             android:title="Sign Out" />
